# ECG-ML-Challenge

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  environment.yml  pyproject.toml  setup.cfg  test_qrs.ipynb
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
docs/: datasets_info.xlsx  ~$datasets_info.xlsx
minimal_runtime/: config.py  init_script.sh  record_evaluator.py  requirements.txt
models/: LSTM_20241111_2019_5_16_0.001.pth
notebooks/: afdb_sample.ipynb  get_data.ipynb  gru_sample.ipynb  model_eval.ipynb  resample.ipynb
src/: __init__.py  app.py  config.py  dataset.py  plots.py
src/dataset/: dataloaders.py  processing.py  processingv2.py
src/model/: evaluate.py  models.py  training.py
src/utilities/: __init__.py  dataloader.py  model.py
src/visualization/: __init__.py  plots.py
test/: config.py  data_test.py  dataloader_test.py  plots_test.py  record_evaluator_test.py
test/utilites/: dataloader_test.py
