[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "The challenge is to develop a machine learning tool capable of analyzing ECG signals to detect atrial fibrillation with the highest possible accuracy. Participants are tasked with building a robust model that can efficiently classify ECG data, identifying irregular heart rhythms associated with atrial fibrillation. The solution should leverage advanced algorithms, signal processing techniques, and potentially deep learning methods to improve precision and reduce false positives."
authors = [
  { name = "AGH Machine Vision Research Group" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true
